
create table users (
    uid serial primary key,
    token uuid unique not null,
    name varchar(255) not null,
    email varchar(255) unique not null
);

create table club (
    cid serial primary key,
    name varchar(255) unique not null,
    owner int references users(uid)
);

create table court (
    crid serial unique primary key,
    name varchar(255) not null,
    club int references club(cid)
);

create table rental (
    rid serial primary key,
    date date not null,
    duration int not null,
    "user" int references users(uid),
    court int references court(crid)
)
